# src/models/user.ts
@@ -1,6 +1,6 @@
-import { Entity, PrimaryGeneratedColumn, Column, CreateDateColumn, OneToMany, UpdateDateColumn } from "typeorm";
-import { Post } from "./post";
-import { Comment } from './comment';
+import { IsNotEmpty, Length } from "class-validator";
+import { Column, Entity, PrimaryGeneratedColumn } from "typeorm";
+import * as bcrypt from "bcryptjs";
 
 @Entity()
 export class User {
@@ -17,9 +17,29 @@ export class User {
     @Column()
     email!: string;
 
-    @OneToMany(_type => Post, (post: Post) => post.user)
-    posts!: Array<Post>
-    @OneToMany(_type => Comment, (comment: Comment) => comment.user)
-    comments!: Array<Comment>;
+    @Column({
+        unique: true
+    })
+    @Length(4, 20)
+    username!: string;
 
+    @Column()
+    @Length(4, 100)
+    password!: string;
+
+    @Column()
+    @IsNotEmpty()
+    role!: string;
+
+    // @OneToMany(_type => Post, (post: Post) => post.user)
+    // posts!: Array<Post>
+    // @OneToMany(_type => Comment, (comment: Comment) => comment.user)
+    // comments!: Array<Comment>;
+    hashPassword() {
+        this.password = bcrypt.hashSync(this.password, 8);
+    }
+
+    checkIfUnencryptedPasswordIsValid(unencryptedPassword: string) {
+        return bcrypt.compareSync(unencryptedPassword, this.password);
+    }
 }
