# src/routes/user.router.ts
@@ -1,4 +1,5 @@
 import express from "express";
+import { User } from "../models/user";
 import UserController from "../controllers/user.controller";
 
 const router = express.Router();
@@ -10,8 +11,21 @@ router.get("/", async (_req, res) => {
 });
 
 router.post("/", async (req, res) => {
+  let { username, password, role, firstName, lastName, email } = req.body;
+  let user = new User();
+  user.username = username;
+  user.password = password;
+  user.role = role;
+  user.firstName = firstName;
+  user.lastName = lastName;
+  user.email = email;
+  user.hashPassword();
+
+  console.log(user)
   const controller = new UserController();
-  const response = await controller.createUser(req.body);
+  
+  const response = await controller.createUser(user);
+  console.log('Res', response)
   return res.send(response);
 });
 
